[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "usim"
author = "Eileen Kuehn, Max Fischer"
author-email = "mainekuehn@gmail.com"
home-page = "https://github.com/MaineKuehn/usim"
description-file = "README.rst"
keywords = "simulation simpy event loop async coroutine"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
requires = [
    "sortedcontainers",
    "asyncstdlib>=1.1.1",
    "typing_extensions>=3.10.0",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=4.3.0",
    "flake8",
    "flake8-bugbear",
    "black; implementation_name=='cpython'",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-contentui",
    "sphinxcontrib-trio"
]

[tool.flit.metadata.urls]
Documentation = "https://usim.readthedocs.io"
